# KTFlow

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
scripts/: gpu_check.py
src/cli/: __init__.py  build_answer_key.py  parse_doc.py  preflight.py  report_errors.py  retag.py  run_corpus.py  train_tagger.py  train_tagger_hf.py
src/ktflow/: config.py  schema.py
src/ktflow/eval/: report.py
src/ktflow/ingest/: pdf.py
src/ktflow/io/: csv.py  jsonl.py  model.py
src/ktflow/map/: graph.py  viz.py  viz_chord.py  viz_sankey.py
src/ktflow/segment/: edu.py  sentence.py
src/ktflow/tag/: hf.py  hybrid.py  ml.py  rules.py
tests/: test_hybrid.py  test_map.py  test_ml.py  test_preflight.py  test_rules.py  test_schema.py  test_segment.py
tools/: venvdoctor.sh
tools/labeler/: streamlit_app.py
